# screenshare-rs

./: .dockerignore  .env.example  Cargo.toml  DEPLOY.md  Dockerfile  LICENSE  README.md  build_and_run.sh  deploy.sh  docker-compose.yml  nginx.conf  screenshare.service
src/: main.rs
static/: index.html  index.js  room.html  room.js  test-maximize.html
