[package]
name = "screenshare-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["ws", "tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.28.0"      
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }